Problem Set 3/slurm-232629.out
  File "model_adult.py", line 86
    self.fc5, nn.Tanh()
       ^
SyntaxError: invalid syntax
